# Nexus

./: .env.example  .gitignore  README.md  pyproject.toml  seed.py  start.sh
Back-end (prototype)/: dashboard.py  seed_massive.py
Back-end (prototype)/docker/neo4j/: init.cypher
Back-end (prototype)/src/: __init__.py
Back-end (prototype)/src/agents/: osint.py  patterns.py  sentinel.py
Back-end (prototype)/src/api/: app.py
Back-end (prototype)/src/config/: __init__.py  settings.py
Back-end (prototype)/src/graph/: neo4j_client.py
Back-end (prototype)/src/integrations/: prometeo.py
Back-end (prototype)/src/models/: __init__.py  agents.py  events.py
Back-end (prototype)/src/orchestrator/: graph.py
Back-end (prototype)/src/tools/: compliance_tools.py  execution_tools.py  osint_tools.py  vector_tools.py
Front-end (prototype)/: README.md  index.html  metadata.json  package.json  server.ts
Front-end (prototype)/src/: App.tsx  types.ts
Front-end (prototype)/src/components/: AgentReportsPanel.tsx  EventSubmissionTesting.tsx  GraphExplorerPage.tsx  ManagerDashboard.tsx  NetworkGraphView.tsx  TenantManagement.tsx  UserDbFlow.tsx
docker/: docker-compose.yml
src/: api.py  main.py
src/agents/: __init__.py  base.py  executor.py  historian.py  jurist.py
src/api/: deps.py
src/graph/: tenant_manager.py
src/ingestion/: consumer.py  enrichment.py  producer.py
src/models/: case.py  graph.py  tenant.py
src/orchestrator/: pipeline.py
src/tools/: graph_tools.py
src/utils/: logging.py
tests/: conftest.py  test_agents.py  test_models.py  test_tools.py
(+9 files in other folders)
